<resources>
    <string name="app_name" translatable="false">Evendate</string>
    <string name="title_activity_detail">Event</string>
    <string name="title_activity_organization">Organizers list</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_city">Cities</string>
    <string name="title_activity_check_in">Check in</string>
    <string name="title_activity_recommendation">Recommendations</string>
    <string name="title_activity_event_registered">My tickets</string>
    <string name="title_activity_network">Networking</string>
    <string name="content_authority" translatable="false">ru.evendate.android</string>
    <string name="account_type" translatable="false">ru.evendate.android.accounts</string>
    <string name="drawer_login_description">To use all features, sign in into your account</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_reel">My events</string>
    <string name="drawer_friends">Friends</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_organizations">Organizers list</string>
    <string name="drawer_subscriptions">Subscriptions</string>
    <string name="drawer_log_out">Log out</string>
    <string name="drawer_tickets">My tickets</string>
    <string name="drawer_check_in">Check in</string>
    <string name="drawer_recommendations">Recommendations</string>
    <string name="tab_main_feed">Feed</string>
    <string name="tab_main_favorite">Favorites</string>
    <string name="tab_main_recommendation">For you</string>
    <string name="tab_user_subscriptions">Subscriptions</string>
    <string name="tab_user_actions">Activity</string>
    <string name="tab_search_events">Events</string>
    <string name="tab_search_organizations">Organizers</string>
    <string name="tab_search_users">Users</string>
    <string name="tab_organization_future_events">Events</string>
    <string name="tab_organization_past_events">Past</string>
    <string name="tab_tickets_future_events">Active</string>
    <string name="tab_tickets_past_events">Used</string>
    <string name="tab_event_registered_future">Future</string>
    <string name="tab_event_registered_past">Past</string>
    <string name="alert_maps_not_available">Please install Google Maps or another map application</string>
    <string name="alert_install_google_maps">Install Google maps</string>
    <string name="download_error">An error occurred</string>
    <string name="loading_error">Error</string>
    <string name="loading_error_description">Problem with loading data. Check your Internet connection</string>
    <string name="loading_retry">Retry</string>
    <string name="list_feed_empty_header">No nearest events yet</string>
    <string name="list_feed_empty_text">Subscribe to organizers or open the recommended events to see more events</string>
    <string name="list_favourites_empty_header">No favorite events yet</string>
    <string name="list_favourites_empty_text">Add event to favorites and they will appear here</string>
    <string name="list_recommendation_empty_header">No recommendations for you yet</string>
    <string name="list_organization_empty_header">No events yet</string>
    <string name="list_organization_empty_text">Try to open other organizers</string>
    <string name="list_users_empty_text">No users yet</string>
    <string name="event_participants">participants</string>
    <string name="event_organization">Organization</string>
    <string name="event_description">Description</string>
    <string name="event_date">Date</string>
    <string name="event_place">Place</string>
    <string name="event_tags">Tags</string>
    <string name="event_link">More</string>
    <string name="event_word_users_and">users and</string>
    <string name="event_word_friends_add">friends added to favorite</string>
    <string name="event_users_all">ALL</string>
    <string name="event_all_day">All day</string>
    <string name="event_price">Price</string>
    <string name="event_free">Free</string>
    <string name="event_price_rub">rub</string>
    <string name="event_price_from">From</string>
    <string name="event_registration">Registration</string>
    <string name="event_ticketing">Buy tickets</string>
    <string name="event_registration_till">Till</string>
    <string name="event_registration_not_required">Not required</string>
    <string name="event_registration_status_not_available">Registration is not available</string>
    <string name="event_ticketing_status_not_available">Tickets are not available</string>
    <string name="event_registration_status_already_registered">You\'re already registered</string>
    <string name="event_ticketing_status_already_purchased">You\'re already bought tickets</string>
    <string name="event_registration_status_registration_approved">Registration was approved</string>
    <string name="event_registration_done">You have successfully registered</string>
    <string name="event_registration_enter_fields">Enter fields</string>
    <string name="event_ticketing_payment_error">Payment error</string>
    <string name="event_ticketing_payment_done">You have successfully paid</string>
    <string name="event_networking_started">Event started</string>
    <string name="event_networking_started_description">If you are attending an event, start looking for participants</string>
    <string name="event_networking_button">Network</string>
    <string name="event_show_on_map">Show on map</string>
    <string name="event_go_to_page">Go to event page</string>
    <string name="action_share">Share</string>
    <string name="action_export_to_calendar">Export to calendar</string>
    <string name="action_add_notification">Notify about the event</string>
    <string name="event_favorite_confirm">Event successfully added to favorites</string>
    <string name="event_favorite_remove_confirm">Event removed from favorites</string>
    <string name="event_share_text_i_like">I like event ‘</string>
    <string name="event_share_text_in_org">’ by organizer </string>
    <string name="event_notification_added">Notification successfully added</string>
    <string name="event_notification_error">An error occurred</string>
    <string name="ticketing_form_choose_tickets">Select tickets</string>
    <string name="ticketing_form_total_cost">Total cost:</string>
    <string name="ticketing_form_promo_code_label">Promo code</string>
    <string name="ticketing_form_promo_code_enter">Submit</string>
    <string name="ticketing_form_promo_code_description">If you have a promo code, enter it and get a discount</string>
    <string name="ticketing_form_toast_tickets">Select tickets to order</string>
    <string name="ticketing_form_toast_promo_code">Enter promo code</string>
    <string name="ticketing_form_toast_promo_code_error">This promo code does not exist or is no longer active</string>
    <string name="ticketing_form_final_cost">To pay:</string>
    <string name="ticketing_form_register_button">Register</string>
    <string name="ticketing_form_order_button">Pay</string>
    <string name="dates_view_date_label">Date</string>
    <string name="dates_view_time_label">Time</string>
    <string name="dates_view_more">MORE</string>
    <string name="dates_view_less">LESS</string>
    <string name="user_card_all">ALL</string>
    <string name="organization_card_subscribers">subscribers</string>
    <string name="organization_word_users">subscribers</string>
    <string name="organization_word_subscribers">Subscribers</string>
    <string name="organization_subscribe">SUBSCRIBE</string>
    <string name="organization_unsubscribe">UNSUBDCRIBE</string>
    <string name="organization_subscribers">ALL SUBSCRIBERS</string>
    <string name="organization_more">MORE</string>
    <string name="organization_go_to_page">GO TO ORGANIZER\'S PAGE</string>
    <string name="organization_description">Description</string>
    <string name="organization_name_label">Organizer</string>
    <string name="organization_page">Organizer page</string>
    <string name="organization_address">Organizer address</string>
    <string name="organization_background_description">Organizer background image</string>
    <string name="organization_dialog_info_title">About Organizer</string>
    <string name="organization_subscription_confirm">Subscription was confirmed</string>
    <string name="organization_subscription_remove_confirm">Subscription was removed</string>
    <string name="action_info">Organizer info</string>
    <string name="intro_miss">Don\'t miss an important event</string>
    <string name="intro_interests">Find out friends interests</string>
    <string name="intro_share">Share events with friends</string>
    <string name="intro_manage">Manage notifications</string>
    <string name="intro_sync">Sync all devices</string>
    <string name="intro_done">Start now</string>
    <string name="intro_skip">Skip</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_skip">Skip</string>
    <string name="dialog_check_organizations">Choose organizer</string>
    <string name="dialog_onboadring_title">You may like it</string>
    <string name="dialog_onboarding_subtitle">We picked some places that suits your interests</string>
    <string name="dialog_event_hide">Hide the event</string>
    <string name="dialog_event_unhide">Remove from hidden</string>
    <string name="dialog_event_fave">Add to favorites</string>
    <string name="dialog_event_unfave">Remove from favorites</string>
    <string name="dialog_event_invite_friend">Invite friend</string>
    <string name="toast_event">Event</string>
    <string name="toast_event_hide">hided</string>
    <string name="toast_event_unhide">removed from hidden</string>
    <string name="toast_event_fave">added to favorites</string>
    <string name="toast_event_unfave">removed from favorites</string>
    <string name="stat_category_event" translatable="false">Event</string>
    <string name="stat_category_organization" translatable="false">Organization</string>
    <string name="stat_category_user" translatable="false">User</string>
    <string name="stat_action_view" translatable="false">View</string>
    <string name="stat_action_notification" translatable="false">Open notification</string>
    <string name="auth_sign_in">Sing in via social network:</string>
    <string name="auth_vk">Sign in via Vk.com</string>
    <string name="auth_google">Sign in via G+</string>
    <string name="auth_fb">Sign in via Facebook</string>
    <string name="auth_description">Evendate is a service that allows you to stay on top of upcoming events in your favorite places.</string>
    <string name="auth_skip">Skip</string>
    <string name="settings_category_notification">Notifications</string>
    <string name="settings_category_main">Main</string>
    <string name="settings_alert">Alert</string>
    <string name="settings_led">Indicator</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_led_color">Indicator color</string>
    <string name="settings_https">Security connection</string>
    <string name="settings_https_description">Use HTTPS protocol</string>
    <string name="settings_about">About app</string>
    <string name="settings_feed_privacy">Privacy</string>
    <string name="city_prompt_where_user">Where are you?</string>
    <string name="city_prompt_where_user_description">To start using Evendate, select your city</string>
    <string name="city_prompt_button">Select your city</string>
    <string name="networking_intro_enter_code">Enter participant\'s code</string>
    <string name="networking_intro_code_hint" translatable="false">0000</string>
    <string name="networking_intro_code_description">Event code can be obtained from the organizer</string>
</resources>