<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/settings_category_notification">
        <SwitchPreference
            android:key="key_notification"
            android:title="@string/settings_alert"
            android:defaultValue="true"/>
        <SwitchPreference
            android:key="key_indicator"
            android:title="@string/settings_led"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="key_vibration"
            android:title="@string/settings_vibration"
            android:defaultValue="true" />
        <Preference
            android:key="key_indicator_color"
            android:title="@string/settings_led_color" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_category_main">
        <SwitchPreference
            android:key="key_https"
            android:title="@string/settings_https"
            android:defaultValue="false"
            android:summary="@string/settings_https_description" />
        <CheckBoxPreference
            android:key="key_feed_privacy"
            android:title="@string/settings_feed_privacy"
            android:defaultValue="true" />
        <Preference
            android:key="key_info"
            android:title="@string/settings_about" />
    </PreferenceCategory>
</PreferenceScreen>