<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_reel_background"
    android:clickable="true"
    android:elevation="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/city_prompt_where_user"
        android:textColor="#FF4A4A4A"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="@string/city_prompt_where_user_description"
        android:textColor="#FF4A4A4A"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:minHeight="0dp"
        android:textColor="@color/accent"
        android:text="@string/city_prompt_button"
        android:textAllCaps="true"/>
</RelativeLayout>