<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="3sp"
        android:text="@string/networking_intro_enter_code"
        android:textColor="#DE000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="136dp"/>

    <EditText
        android:id="@+id/code_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/networking_intro_code_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="252dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/networking_intro_code_description"
        android:textColor="#8A000000"
        android:textSize="12sp"/>
</LinearLayout>
