<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="36dp"
    android:layout_marginEnd="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="44dp"
    android:minHeight="488dp"
    android:minWidth="240dp"
    android:maxWidth="360dp">-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="360dp"
    android:minHeight="488dp"
    android:minWidth="280dp"
    app:layout_gravity="center">

    <ImageView
        android:id="@+id/auth_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/auth_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="8dp"/>

    <TextView
        android:id="@+id/auth_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="6sp"
        android:text="@string/auth_description"
        android:textColor="#FF4A4A4A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_logo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="39dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/auth_description"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#FFD7D7D7"
        app:layout_constraintBottom_toTopOf="@+id/auth_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_description"
        tools:layout_editor_absoluteY="111dp"/>

    <TextView
        android:id="@+id/auth_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/auth_sign_in"
        android:textColor="#8B000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/sing_in_vk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="120dp"/>

    <FrameLayout
        android:id="@+id/sing_in_google_button"
        style="@style/SignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sing_in_vk_button"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/auth_google_button"
        app:layout_constraintBottom_toTopOf="@+id/sing_in_fb_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_vk_button"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="202dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/auth_button_left_padding"
            android:paddingStart="@dimen/auth_button_left_padding"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/auth_google"
            android:textColor="#fff"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_g_plus"/>
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sing_in_vk_button"
        style="@style/SignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/auth_sign_in"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/auth_vk_button"
        app:layout_constraintBottom_toTopOf="@+id/sing_in_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_sign_in"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="146dp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingBottom="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_vk"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/auth_button_left_padding"
            android:paddingStart="@dimen/auth_button_left_padding"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/auth_vk"
            android:textColor="#fff"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sing_in_fb_button"
        style="@style/SignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/auth_fb_button"
        app:layout_constraintBottom_toTopOf="@+id/auth_skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_google_button">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_fb"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/auth_button_left_padding"
            android:paddingStart="@dimen/auth_button_left_padding"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/auth_fb"
            android:textColor="#fff"/>
    </FrameLayout>

    <Button
        android:id="@+id/auth_skip_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minHeight="0dp"
        android:text="@string/auth_skip"
        android:textAppearance="@style/Body2.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_fb_button"/>
</android.support.constraint.ConstraintLayout>